GEODE-504 - Removing references to XX:MaxPermSize since due to JDK 8